added team names + matricola

--- a/group2413_exercise1.ipynb
+++ b/group2413_exercise1.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27bf1530",
+   "id": "f7015d58",
    "metadata": {},
    "source": [
-    "Team 2413:\n",
-    "- Maryam Gholami ()\n",
-    "- Muhammad Usama ()\n",
+    "## Team 2413:\n",
+    "- Maryam Gholami Shiri (2013071)\n",
+    "- Muhammad Usama Qasim (2040472)\n",
     "- Laura Schulze (2122311)\n",
-    "- Savina Tsichli ()"
+    "- Savina Tsichli (10738280)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52dbb22d",
+   "id": "82a004ec",
    "metadata": {},
    "source": [
     "# Exercise 1"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff8d936c",
+   "id": "a1884ea3",
    "metadata": {},
    "source": [
     "Analyze the data file provided at the lesson with CNNs. Each of the three classes contains a part of\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b94eea",
+   "id": "13da0025",
    "metadata": {},
    "source": [
     "## 1.1\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5262c3c0",
+   "id": "f2c081c7",
    "metadata": {},
    "source": [
     "## 1.2\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2213da56",
+   "id": "6b66f9f2",
    "metadata": {},
    "source": [
     "## 1.3 \n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df0f8d08",
+   "id": "522ea617",
    "metadata": {},
    "source": [
     "## 1.4 (optional)\n",
