added library imports and loading data

--- a/Ex2/group2413_exercise2.ipynb
+++ b/Ex2/group2413_exercise2.ipynb
@@ -24,18 +24,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1b9fbf68-9c6e-4a2d-9f09-c066220583c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from matplotlib.ticker import NullFormatter\n",
+    "plt.rcParams['font.size'] = 13\n",
+    "\n",
+    "# manifold.TSNE\n",
+    "from sklearn import manifold  #, datasets\n",
+    "from time import time\n",
+    "\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2f7aaf5-efea-4651-ba08-0ed0b069ae3f",
+   "metadata": {},
+   "source": [
+    "## Data and labels \n",
+    "In this example we know the labels, hence we can test the performances of t-SNE and DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8384c357-04d8-4e0c-a5dd-723e93b76793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N= 600   L=D= 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname, fnamey=\"x_12d.dat\",\"y_12d.dat\"\n",
+    "data=np.loadtxt(\"DATA/\"+fname, delimiter='\\t')\n",
+    "y=np.loadtxt(\"DATA/\"+fnamey,dtype=int)\n",
+    "N=len(data)\n",
+    "D=len(data[0])\n",
+    "print(\"N=\",N,\"  L=D=\",D)\n",
+    "x=data"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0cf792da-5b53-42a5-a3e1-a4b6696654bd",
    "metadata": {},
    "source": [
-    "## 2.1 “eps” (ε) and “minPts” (mP) in DBSCAN algorithm for clustering\n",
+    "## 2.1 “eps” (ε) and “minPts” ($m_P$) in DBSCAN algorithm for clustering\n",
     "\n",
     "Refine the grid with more values of ε and $m_P$ and plot a heat-map\n",
     "showing the normalized mutual information (NMI) between true\n",
@@ -103,7 +152,7 @@
    "metadata": {},
    "source": [
     "## 2.4 OPTIONAL \n",
-    "Visualize the data with other methods from the scikit package"
+    "Visualize the data with other [methods from the scikit package](https://scikit-learn.org/stable/auto_examples/manifold/plot_manifold_sphere.html#sphx-glr-auto-examples-manifold-plot-manifold-sphere-pyhttps://scikit-learn.org/stable/auto_examples/manifold/plot_manifold_sphere.html%23sphx-glr-auto-examples-manifold-plot-manifold-sphere-py)."
    ]
   }
  ],
