--- a/Ex3/group2413_exercise3.ipynb
+++ b/Ex3/group2413_exercise3.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "e206870f",
    "metadata": {},
    "outputs": [
@@ -167,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum accuracy with λ: 0.950 at reg_lambda=0\n",
-      "Maximum accuracy with γ: 0.948 at gamma=0\n",
-      "Maximum accuracy: 0.949 achieved with n_estimators: 170\n"
+      "Maximum accuracy: 0.950 at reg_lambda=0\n",
+      "Maximum accuracy: 0.948 at gamma=0\n",
+      "Maximum accuracy : 0.949 at n_estimators=170\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "0673943a",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
     "fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
     "\n",
     "# Plot for the number of estimators on the first subplot\n",
-    "axs[0].plot(n_estimators_range, accuracies, marker='o', linestyle='-', color='b')\n",
+    "axs[0].plot(n_estimators_range, accuracies_n_estimators, marker='o', linestyle='-', color='b')\n",
     "axs[0].set_title('Model Accuracy vs. Number of Estimators')\n",
     "axs[0].set_xlabel('Number of Estimators')\n",
     "axs[0].set_ylabel('Accuracy')\n",
