--- a/Ex3/group2413_exercise3.ipynb
+++ b/Ex3/group2413_exercise3.ipynb
@@ -62,7 +62,10 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import cross_val_score"
    ]
   },
   {
@@ -400,9 +403,6 @@
     }
    ],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
     "# Define the parameter grid for grid search\n",
     "hls = [(x,) for x in range(10, 91, 10)]\n",
     "hls += [(x,) for x in range(100, 201, 50)]\n",
@@ -583,8 +583,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "# NN layout\n",
     "hl_size = (100, 40)\n",
     "\n",
