added the itertools bit

--- a/Ex4/group2413_exercise4.ipynb
+++ b/Ex4/group2413_exercise4.ipynb
@@ -115,6 +115,23 @@
    "source": [
     "To compute $\\mathscr{L}$ , consider full configurations x=(v,h) and their energy E(x). With $\\mathscr{L}$ visible units and M hidden units, we have 2L+M possible configurations. The partition function Z is the sum of all their Boltzmann weights e-E(x). The average expectation of the energy according to data is computed by averaging the energy of each data sample vn completed with all 2M possible hidden states. Thus, in total there are N*2M configurations to use in the <E>data average."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f436d56-0af9-4bc0-b913-7ba024bf58c4",
+   "metadata": {},
+   "source": [
+    "The package `itertools` is useful for generating the possible configurations.\n",
+    "https://docs.python.org/3/library/itertools.html\n",
+    "```python\n",
+    "Q=4\n",
+    "import itertools as it\n",
+    "conf = it.product((0,1), repeat=Q)\n",
+    "all_conf=list(conf)\n",
+    "for x in all_conf:\n",
+    "print(x)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
