--- a/Ex3/group2413_exercise3.ipynb
+++ b/Ex3/group2413_exercise3.ipynb
@@ -7,7 +7,6 @@
    "source": [
     "## Team 2413:\n",
     "- Maryam Gholami Shiri (2013071)\n",
-    "- Muhammad Usama Qasim (2040472)\n",
     "- Laura Schulze (2122311)\n",
     "- Savina Tsichli (10738280)"
    ]
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e8968141",
    "metadata": {},
    "outputs": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "10310863",
    "metadata": {},
    "outputs": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "aadbc6d2",
    "metadata": {},
    "outputs": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e206870f",
    "metadata": {},
    "outputs": [
@@ -157,9 +156,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum accuracy: 0.950 at reg_lambda=0\n",
-      "Maximum accuracy: 0.948 at gamma=0\n",
-      "Maximum accuracy : 0.949 at n_estimators=170\n"
+      "Maximum accuracy: 0.950 at reg_lambda=0.000\n",
+      "Maximum accuracy: 0.948 at gamma=0.000\n",
+      "Maximum accuracy : 0.949 at n_estimators=170.000\n"
      ]
     }
    ],
@@ -193,15 +192,15 @@
     "# Finding and printing the max values and corresponding parameters\n",
     "max_accuracy_lambda = max(accuracies_lambda)\n",
     "max_lambda = reg_lambda_values[accuracies_lambda.index(max_accuracy_lambda)]\n",
-    "print(f\"Maximum accuracy: {max_accuracy_lambda:.3f} at reg_lambda={max_lambda}\")\n",
+    "print(f\"Maximum accuracy: {max_accuracy_lambda:.3f} at reg_lambda={max_lambda:.3f}\")\n",
     "\n",
     "max_accuracy_gamma = max(accuracies_gamma)\n",
     "max_gamma = gamma_values[accuracies_gamma.index(max_accuracy_gamma)]\n",
-    "print(f\"Maximum accuracy: {max_accuracy_gamma:.3f} at gamma={max_gamma}\")\n",
+    "print(f\"Maximum accuracy: {max_accuracy_gamma:.3f} at gamma={max_gamma:.3f}\")\n",
     "\n",
     "max_accuracy_n_estimators = max(accuracies_n_estimators)\n",
     "max_n_estimators = n_estimators_range[accuracies_n_estimators.index(max_accuracy_n_estimators)]\n",
-    "print(f\"Maximum accuracy : {max_accuracy_n_estimators:.3f} at n_estimators={max_n_estimators}\")    "
+    "print(f\"Maximum accuracy : {max_accuracy_n_estimators:.3f} at n_estimators={max_n_estimators:.3f}\")    "
    ]
   },
   {
