--- a/Ex4/group2413_exercise4.ipynb
+++ b/Ex4/group2413_exercise4.ipynb
@@ -38,7 +38,117 @@
    "id": "9a1d58d8-8994-4e1c-85d5-2bf0e39baf32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from numpy import exp, sqrt, abs\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import NullFormatter\n",
+    "from IPython.display import display_html \n",
+    "import pandas as pd\n",
+    "plt.rcParams['font.size'] = 13\n",
+    "\n",
+    "### Data\n",
+    "dname=\"DATA\"\n",
+    "fname=dname+'/x_RBM_2024_exercise.dat'\n",
+    "\n",
+    "# loading data: each row is a list of visible units\n",
+    "v = np.loadtxt(fname, delimiter=\" \", dtype=int)\n",
+    "\n",
+    "# RBM, nr of hidden units\n",
+    "M = 3\n",
+    "# range of each initial weight\n",
+    "sigma = sqrt(4. / float(len(v[0]) + M))\n",
+    "# random seed for reproducibility\n",
+    "np.random.seed(12345)\n",
+    "# initial weights from a Normal distr.\n",
+    "w = sigma * np.random.randn(len(v[0]), M)\n",
+    "a = sigma * np.random.randn(len(v[0]))\n",
+    "b = np.zeros(M)\n",
+    "\n",
+    "## Plotting\n",
+    "\n",
+    "def plotgraph():\n",
+    "    fig, ax = plt.subplots(1,1 , figsize=(7, 3.3))\n",
+    "    ax.tick_params(left=False,bottom=False)\n",
+    "    ax.xaxis.set_major_formatter(NullFormatter())\n",
+    "    ax.yaxis.set_major_formatter(NullFormatter())\n",
+    "\n",
+    "    A = 1. / max(w.max(), -w.min())\n",
+    "    for i in range(len(v[0])):\n",
+    "        for j in range(M):\n",
+    "            ex, ey, col = (i, j), (i + 1, j), mycolor(w[i][j])\n",
+    "            ax.plot(ex, ey, col, zorder=1, alpha=A * abs(w[i][j]))\n",
+    "\n",
+    "    A = 300.\n",
+    "    for i in range(len(v[0])):\n",
+    "        ax.scatter(i, 0, s=A * abs(a[i]), zorder=2, c=mycolor(a[i]))\n",
+    "    for j in range(M):\n",
+    "        ax.scatter(len(v[0]) + 1, j, s=min(300, A * abs(b[j])), zorder=2, c=mycolor(b[j]), marker=\"s\")\n",
+    "    ax.set_title('>0 red, <0 blue')\n",
+    "\n",
+    "def mycolor(val):\n",
+    "    if val > 0:\n",
+    "        return 'red'\n",
+    "    elif val < 0:\n",
+    "        return 'blue'\n",
+    "    else:\n",
+    "        return 'black'\n",
+    "\n",
+    "def activate(v_in, wei, bias, DE):\n",
+    "    act = np.dot(v_in, wei) + bias\n",
+    "    n = np.shape(act)\n",
+    "    prob = 1. / (1. + exp(-DE * act))\n",
+    "    v_out = np.full(n, 0, dtype=int)\n",
+    "    v_out[np.random.random_sample(n) < prob] = 1\n",
+    "    return v_out\n",
+    "\n",
+    "## RBM train\n",
+    "\n",
+    "np.random.seed(12345)\n",
+    "\n",
+    "plotgraph()\n",
+    "\n",
+    "l_rate = 1.0\n",
+    "mini, m = 500, 0\n",
+    "\n",
+    "for epoch in range(100):\n",
+    "    l_rate_m = l_rate / mini\n",
+    "    np.random.shuffle(v)  # Shuffle data at the beginning of each epoch\n",
+    "    for k in range(len(v)):\n",
+    "        if m == 0:\n",
+    "            v_data, v_model = np.zeros(len(v[0])), np.zeros(len(v[0]))\n",
+    "            h_data, h_model = np.zeros(M), np.zeros(M)\n",
+    "            vh_data, vh_model = np.zeros((len(v[0]), M)), np.zeros((len(v[0]), M))\n",
+    "\n",
+    "        h = activate(v[k], w, b, 1)\n",
+    "        vf = activate(h, w.T, a, 1)\n",
+    "        hf = activate(vf, w, b, 1)\n",
+    "\n",
+    "        v_data += v[k]\n",
+    "        v_model += vf\n",
+    "        h_data += h\n",
+    "        h_model += hf\n",
+    "        vh_data += np.outer(v[k].T, h)\n",
+    "        vh_model += np.outer(vf.T, hf)\n",
+    "\n",
+    "        m += 1\n",
+    "        if m == mini:\n",
+    "            dw = l_rate_m * (vh_data - vh_model)\n",
+    "            da = l_rate_m * (v_data - v_model)\n",
+    "            db = l_rate_m * (h_data - h_model)\n",
+    "            w = w + dw\n",
+    "            a = a + da\n",
+    "            b = b + db\n",
+    "            m = 0\n",
+    "\n",
+    "    l_rate = l_rate / (0.01 * l_rate + 1)\n",
+    "\n",
+    "print(\"Final weights:\", w)\n",
+    "print(\"Final visible bias:\", a)\n",
+    "print(\"Final hidden bias:\", b)\n",
+    "plotgraph()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
