--- a/Ex4/group2413_exercise4.ipynb
+++ b/Ex4/group2413_exercise4.ipynb
@@ -216,115 +216,98 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from numpy import exp, sqrt, abs\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.ticker import NullFormatter\n",
-    "from IPython.display import display_html \n",
-    "import pandas as pd\n",
-    "plt.rcParams['font.size'] = 13\n",
+    "# Load data\n",
+    "data = np.loadtxt('x_RBM_2024_exercise.dat')\n",
+    "print(data.shape)\n",
     "\n",
-    "### Data\n",
-    "dname=\"DATA\"\n",
-    "fname=dname+'/x_RBM_2024_exercise.dat'\n",
+    "# Initialize RBM Parameters\n",
+    "L = 10  # Number of visible units\n",
+    "M = 3    # Number of hidden units\n",
+    "W = np.random.randn(L, M)  # Weight matrix\n",
+    "b_visible = np.zeros(L)           # Visible bias\n",
+    "b_hidden = np.zeros(M)             # Hidden bias\n",
     "\n",
-    "# loading data: each row is a list of visible units\n",
-    "v = np.loadtxt(fname, delimiter=\" \", dtype=int)\n",
+    "# Define the sigmoid function\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
     "\n",
-    "# RBM, nr of hidden units\n",
-    "M = 3\n",
-    "# range of each initial weight\n",
-    "sigma = sqrt(4. / float(len(v[0]) + M))\n",
-    "# random seed for reproducibility\n",
-    "np.random.seed(12345)\n",
-    "# initial weights from a Normal distr.\n",
-    "w = sigma * np.random.randn(len(v[0]), M)\n",
-    "a = sigma * np.random.randn(len(v[0]))\n",
-    "b = np.zeros(M)\n",
+    "# Contrastive Divergence (CD) training with multiple steps\n",
+    "def CD_train(data, W, b_visible, b_hidden, learning_rate=0.1, k=1):\n",
+    "    num_data = len(data)\n",
+    "    for _ in range(k):\n",
+    "        # Positive phase\n",
+    "        positive_hidden = sigmoid(np.dot(data, W) + b_hidden)\n",
+    "        positive_associations = np.dot(data.T, positive_hidden)\n",
     "\n",
-    "## Plotting\n",
+    "        # Negative phase\n",
+    "        negative_visible = np.random.binomial(1, sigmoid(np.dot(positive_hidden, W.T) + b_visible))\n",
+    "        negative_hidden = sigmoid(np.dot(negative_visible, W) + b_hidden)\n",
+    "        negative_associations = np.dot(negative_visible.T, negative_hidden)\n",
     "\n",
-    "def plotgraph():\n",
-    "    fig, ax = plt.subplots(1,1 , figsize=(7, 3.3))\n",
-    "    ax.tick_params(left=False,bottom=False)\n",
+    "        # Update parameters\n",
+    "        W += learning_rate * ((positive_associations - negative_associations) / num_data)\n",
+    "        b_visible += learning_rate * np.mean(data - negative_visible, axis=0)\n",
+    "        b_hidden += learning_rate * np.mean(positive_hidden - negative_hidden, axis=0)\n",
+    "\n",
+    "# Training Loop\n",
+    "epochs = 100  # Number of epochs\n",
+    "batch_size = 32  # Batch size\n",
+    "num_batches = len(data) // batch_size\n",
+    "num_CD_steps = 5  # Number of contrastive divergence steps\n",
+    "\n",
+    "w = []\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    # Shuffle the data for each epoch\n",
+    "    np.random.shuffle(data)\n",
+    "    \n",
+    "    for batch_idx in range(num_batches):\n",
+    "        batch_data = data[batch_idx * batch_size: (batch_idx + 1) * batch_size]\n",
+    "        \n",
+    "        # Update RBM parameters using CD with multiple steps\n",
+    "        CD_train(batch_data, W, b_visible, b_hidden, k=num_CD_steps)\n",
+    "    \n",
+    "    # Save the weights at the end of each epoch\n",
+    "    w.append(W.copy())\n",
+    "\n",
+    "# Plotting the weights of the RBM after training\n",
+    "w = np.array(w)\n",
+    "for i in range(M):\n",
+    "    plt.subplot(M, 1, i+1)\n",
+    "    plt.plot(w[:, :, i])\n",
+    "    plt.title(f'Hidden unit {i+1}')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('Weight')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "(x1, y1) = create_coord(L, 0)\n",
+    "(x2, y2) = create_coord(M, 1, f=0.7)\n",
+    "\n",
+    "def plotgraph(epoch=0):\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(7, 3.3))\n",
+    "    ax.tick_params(left=False, bottom=False)\n",
     "    ax.xaxis.set_major_formatter(NullFormatter())\n",
     "    ax.yaxis.set_major_formatter(NullFormatter())\n",
     "\n",
     "    A = 1. / max(w.max(), -w.min())\n",
-    "    for i in range(len(v[0])):\n",
+    "    for i in range(L):\n",
     "        for j in range(M):\n",
-    "            ex, ey, col = (i, j), (i + 1, j), mycolor(w[i][j])\n",
-    "            ax.plot(ex, ey, col, zorder=1, alpha=A * abs(w[i][j]))\n",
+    "            ex, ey, col = (y1[i], y2[j]), (x1[i], x2[j]), mycolor(w[-1, i, j])\n",
+    "            ax.plot(ex, ey, col, zorder=1, alpha=A * abs(w[-1, i, j]))\n",
     "\n",
     "    A = 300.\n",
-    "    for i in range(len(v[0])):\n",
-    "        ax.scatter(i, 0, s=A * abs(a[i]), zorder=2, c=mycolor(a[i]))\n",
+    "    for i in range(L):\n",
+    "        ax.scatter(y1[i], x1[i], s=A * abs(b_visible[i]), zorder=2, c=mycolor(b_visible[i]))\n",
+    "\n",
     "    for j in range(M):\n",
-    "        ax.scatter(len(v[0]) + 1, j, s=min(300, A * abs(b[j])), zorder=2, c=mycolor(b[j]), marker=\"s\")\n",
-    "    ax.set_title('>0 red, <0 blue')\n",
+    "        ax.scatter(y2[j], x2[j], s=min(300, A * abs(b_hidden[j])), zorder=2, c=mycolor(b_hidden[j]), marker=\"s\")\n",
     "\n",
-    "def mycolor(val):\n",
-    "    if val > 0:\n",
-    "        return 'red'\n",
-    "    elif val < 0:\n",
-    "        return 'blue'\n",
-    "    else:\n",
-    "        return 'black'\n",
+    "    ax.set_title(f'>0 red, <0 blue, epoch={epoch}')\n",
+    "    ax.text(-0.51, 0.85, \"hidden\\nlayer\")\n",
+    "    plt.show()\n",
     "\n",
-    "def activate(v_in, wei, bias, DE):\n",
-    "    act = np.dot(v_in, wei) + bias\n",
-    "    n = np.shape(act)\n",
-    "    prob = 1. / (1. + exp(-DE * act))\n",
-    "    v_out = np.full(n, 0, dtype=int)\n",
-    "    v_out[np.random.random_sample(n) < prob] = 1\n",
-    "    return v_out\n",
-    "\n",
-    "## RBM train\n",
-    "\n",
-    "np.random.seed(12345)\n",
-    "\n",
-    "plotgraph()\n",
-    "\n",
-    "l_rate = 1.0\n",
-    "mini, m = 500, 0\n",
-    "\n",
-    "for epoch in range(100):\n",
-    "    l_rate_m = l_rate / mini\n",
-    "    np.random.shuffle(v)  # Shuffle data at the beginning of each epoch\n",
-    "    for k in range(len(v)):\n",
-    "        if m == 0:\n",
-    "            v_data, v_model = np.zeros(len(v[0])), np.zeros(len(v[0]))\n",
-    "            h_data, h_model = np.zeros(M), np.zeros(M)\n",
-    "            vh_data, vh_model = np.zeros((len(v[0]), M)), np.zeros((len(v[0]), M))\n",
-    "\n",
-    "        h = activate(v[k], w, b, 1)\n",
-    "        vf = activate(h, w.T, a, 1)\n",
-    "        hf = activate(vf, w, b, 1)\n",
-    "\n",
-    "        v_data += v[k]\n",
-    "        v_model += vf\n",
-    "        h_data += h\n",
-    "        h_model += hf\n",
-    "        vh_data += np.outer(v[k].T, h)\n",
-    "        vh_model += np.outer(vf.T, hf)\n",
-    "\n",
-    "        m += 1\n",
-    "        if m == mini:\n",
-    "            dw = l_rate_m * (vh_data - vh_model)\n",
-    "            da = l_rate_m * (v_data - v_model)\n",
-    "            db = l_rate_m * (h_data - h_model)\n",
-    "            w = w + dw\n",
-    "            a = a + da\n",
-    "            b = b + db\n",
-    "            m = 0\n",
-    "\n",
-    "    l_rate = l_rate / (0.01 * l_rate + 1)\n",
-    "\n",
-    "print(\"Final weights:\", w)\n",
-    "print(\"Final visible bias:\", a)\n",
-    "print(\"Final hidden bias:\", b)\n",
-    "plotgraph()\n",
-    "plt.show()"
+    "plotgraph()"
    ]
   },
   {
